meow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meow-svc
spec:
  selector:
    app: meow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
