meow/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meow-ingress
  annotations:
    ingress.kubernetes.io/class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /meow
            backend:
              serviceName: meow-svc
              servicePort: 80
