meow/meow.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meow-ingress
  annotations:
    ingress.kubernetes.io/class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /meow
            backend:
              serviceName: meow-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: meow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meow
  template:
    metadata:
      labels:
        app: meow
    spec:
      containers:
        - name: meow
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: meow-service
spec:
  selector:
    app: meow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
